# MiniABL

./: .gitignore  README.md  env_test.py  main.py  pyproject.toml  requirements.txt  test.py  train.py
configs/: README.md  config.yaml
configs/agent/: minigrid_ppo.yaml
configs/env/: minigrid.yaml
configs/env/minigrid_maps/: easy_small_maps.yaml  maps.yaml
miniabl/env/: minigrid_env.py
miniabl/envs/: minigrid_env.py  minihack_env.py
src/agent_manager/: agent_factory.py  agent_interface.py
src/agent_manager/agents/base_agent/: agent_interface.py
src/agent_manager/agents/base_agent/submodules/: action_model.py  env_wrapper.py  kb.py  memory.py
src/agent_manager/agents/minigrid_keyroom_ppo_agent/: agent.py  conf.yaml
src/agent_manager/agents/minigrid_keyroom_ppo_agent/submodules/: action_model.py  memory.py  ppo.pth
src/agent_manager/agents/minihack_keyroom_symbol_manual_agent/: agent.py
src/agent_manager/prolog_agent/: prolog_agent_interface.py  swish.pl
src/agent_manager/python_agent/: a2rl_agent.py  python_agent_interface.py  test_python_agent.py  vlm_agent.py
src/agent_manager/python_agent/a2rl/: a2rl_discover.py  a2rl_test.py  a2rl_train.py  atomic_policy_manager.py  symbol_manager.py
src/config_manager/: conf.yaml  conf_old.yaml  new_conf.yaml  new_conf_minigrid.yaml
src/env_manager/: env_factory.py  env_interface.py  minigrid_env.py  minihack_env.py
src/pipeline/: module_manager.py
src/rec_manager/: none_rec.py  rec_factory.py  rec_interface.py
src/rec_manager/cnn_rec/: cnn.py  cnn_rec.py  dataset_build.py
tmp_data/: policy.txt
(+4 files in other folders)
