[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miniabl"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gymnasium",
    "loguru",
    "minihack",
    "minigrid",
    "nle",
    "numpy",
    "Pillow",
    "pyswip",
    "PyYAML",
    "sympy",
    "torch",
    "torchvision",
    "tqdm",
    "wandb",
    "hydra-core",
    "opencv-python",
]

[tool.setuptools.packages.find]
where = ["src"]

# --------------------------
# Ruff 配置（忽略 minihack_env.py 的 F401）
# --------------------------
[tool.ruff]
# 可选：指定 Ruff 检查的 Python 版本（与你的环境匹配，如 3.10）


[tool.ruff.per-file-ignores]
# 忽略 minihack_env.py 的“导入未使用”错误（F401）
"src/env_manager/minihack_env.py" = ["F401"]